--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using CarMarketplace.Web
-@using CarMarketplace.Web.Models
+@using CarMarketplace.Web.ViewModels
+@using CarMarketplace.Services.Data
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
