--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using CarMarketplace.Web
-@using CarMarketplace.Web.ViewModels
 @using CarMarketplace.Services.Data
+@using CarMarketplace.Web.ViewModels
+@using CarMarketplace.Services.Data.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
