--- a/CarMarketplace.Web/Views/Home/Search.cshtml
+++ b/CarMarketplace.Web/Views/Home/Search.cshtml
@@ -4,33 +4,82 @@
     ViewData["Title"] = "Search";
 }
 
-<title>@ViewBag["Data"]</title>
-@using (Html.BeginForm("Search", "Dealership", FormMethod.Get))
-{
-    <div>
-        <select class="form-control" id="Make" name="Make">
-            @foreach (var make in Model.Makes)
-            {
-                <option value="@make">@make</option>
-            }
-        </select>
-    </div>
-    <div>
-        <select class="form-control" id="Models" name="Make">
-            @foreach (var model in Model.Models.Where(x => x.Manufacturer ==)
-            {
-                <option value="@make">@make</option>
-            }
-        </select>
-    </div>
-    <div>
-        @Html.LabelFor(m => m.MinPrice)
-        @Html.TextBoxFor(m => m.MinPrice)
-    </div>
-    <div>
-        @Html.LabelFor(m => m.MaxPrice)
-        @Html.TextBoxFor(m => m.MaxPrice)
-    </div>
-
-    <input type="submit" value="Search" />
-}
+<form>
+    <fieldset>
+        <div class="form-group">
+            <label for="exampleSelect1" class="form-label mt-4">Select Make</label>
+            <select class="form-select" id="MakeSelect">
+                <option>All</option>
+                @foreach (var item in Model.Makes)
+                {
+                    <option value="@item.Id">@item</option>
+                }
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="exampleTextarea" class="form-label mt-4">Example textarea</label>
+            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="formFile" class="form-label mt-4">Default file input example</label>
+            <input class="form-control" type="file" id="formFile">
+        </div>
+        <fieldset class="form-group">
+            <legend class="mt-4">Radio buttons</legend>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
+                <label class="form-check-label" for="optionsRadios1">
+                    Option one is this and that—be sure to include why it's great
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                <label class="form-check-label" for="optionsRadios2">
+                    Option two can be something else and selecting it will deselect option one
+                </label>
+            </div>
+            <div class="form-check disabled">
+                <input class="form-check-input" type="radio" name="optionsRadios" id="optionsRadios3" value="option3" disabled="">
+                <label class="form-check-label" for="optionsRadios3">
+                    Option three is disabled
+                </label>
+            </div>
+        </fieldset>
+        <fieldset class="form-group">
+            <legend class="mt-4">Checkboxes</legend>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Default checkbox
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked="">
+                <label class="form-check-label" for="flexCheckChecked">
+                    Checked checkbox
+                </label>
+            </div>
+        </fieldset>
+        <fieldset class="form-group">
+            <legend class="mt-4">Switches</legend>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+            </div>
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked="">
+                <label class="form-check-label" for="flexSwitchCheckChecked">Checked switch checkbox input</label>
+            </div>
+        </fieldset>
+        <fieldset class="form-group">
+            <legend class="mt-4">Ranges</legend>
+            <label for="customRange1" class="form-label">Example range</label>
+            <input type="range" class="form-range" id="customRange1">
+            <label for="disabledRange" class="form-label">Disabled range</label>
+            <input type="range" class="form-range" id="disabledRange" disabled="">
+            <label for="customRange3" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+        </fieldset>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </fieldset>
+</form>
