--- a/CarMarketplace.Web/Views/Home/Index.cshtml
+++ b/CarMarketplace.Web/Views/Home/Index.cshtml
@@ -6,41 +6,52 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-<div class="container-fluid p-0">
-    <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                @*<img class="w-100" src="img/carousel-1.jpg" alt="Image">*@
-                <p>First image</p>
-                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                    <div class="p-3" style="max-width: 900px;">
-                        <i class="fa fa-home fa-4x text-primary mb-4 d-none d-sm-block"></i>
-                        <h1 class="display-2 text-uppercase text-white mb-md-4">Build Your Dream House With Us</h1>
-                        <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Get A Quote</a>
-                    </div>
+
+<div id="carousel" class="carousel slide" data-ride="carousel">
+    <table class="carousel-inner">
+        <tr class="carousel-item active">
+
+            <td class="w-50">
+                <img class="card-img-top" src="/testImages/Night GTR.jpg" alt="Car Image">
+                <div class="card-body">
+                    <h5 class="card-title">BMW 3 Series</h5>
+                    <p class="card-text">Year: 2019</p>
+                    <p class="card-text">Mileage: 20,000 km</p>
+                    <p class="card-text">Condition: Used</p>
+                    <h6 class="">€30,000</h6>
+                    <p class="card-text">Contact: John Doe</p>
+                    <p class="card-text">Phone: 123-456-7890</p>
+                    <p class="card-text">Email: johndoe@example.com</p>
                 </div>
-            </div>
-            <div class="carousel-item">
-                @*<img class="w-100" src="img/carousel-2.jpg" alt="Image">*@
-                <p>Second image</p>
-                <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                    <div class="p-3" style="max-width: 900px;">
-                        <i class="fa fa-tools fa-4x text-primary mb-4 d-none d-sm-block"></i>
-                        <h1 class="display-2 text-uppercase text-white mb-md-4">We Are Trusted For Your Project</h1>
-                        <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Contact Us</a>
-                    </div>
+            </td>
+            <td class="w-50">
+                <img class="card-img-top car-image" src="/testImages/Night GTR.jpg" alt="Car Image">
+                <div class="card-body">
+                    <h5 class="card-title">BMW 3 Series</h5>
+                    <p class="card-text">Year: 2019</p>
+                    <p class="card-text">Mileage: 20,000 km</p>
+                    <p class="card-text">Condition: Used</p>
+                    <h6 class="">€30,000</h6>
+                    <p class="card-text">Contact: John Doe</p>
+                    <p class="card-text">Phone: 123-456-7890</p>
+                    <p class="card-text">Email: johndoe@example.com</p>
                 </div>
-            </div>
+            </td>
+       
+        </tr>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Second slide">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
-                data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#header-carousel"
-                data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Third slide">
+        </div>
+    </table>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
