--- a/CarMarketplace.Web/Views/Home/Index.cshtml
+++ b/CarMarketplace.Web/Views/Home/Index.cshtml
@@ -14,20 +14,25 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <a asp-controller="Home" asp-action="Index"></a>
-            <table>
-                <tbody>
-                    <tr>
-                        <td>
-                            <img src="~/testImages/plant-in-wood.jpg" class="d-block" style="Height: 40rem" />
-                        </td>
-                        <td>
-                            <p>az sum gosho</p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <div class="carousel-item">
+            <div class="row">
+                <div class="section">
+                    <img class="img" src="~/testImages/TestImage.jpg" />
+                    <div class="left-section">
+                        <p>Make: Mercedes-Benz</p>
+                        <p>Model: G class</p>
+                        <p>Year: 2011</p>
+                    </div>
+                </div>
+                <div class="section">
+                    <img class="img" src="~/testImages/TestImage2.jpg" />
+                    <div class="right-section">
+                        <p>Make: </p>
+                        <p>Model: </p>
+                        <p>Year: </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="..." alt="Second slide">
