--- a/CarMarketplace.Web/Views/Home/Index.cshtml
+++ b/CarMarketplace.Web/Views/Home/Index.cshtml
@@ -15,30 +15,35 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item">
-            <div class="row">
+            <div class="section">
+                <img class="img" src="~/testImages/TestImage.jpg" />
                 <div class="section">
-                    <img class="img" src="~/testImages/TestImage.jpg" />
-                    <div class="left-section">
-                        <p>Make: Mercedes-Benz</p>
-                        <p>Model: G class</p>
-                        <p>Year: 2011</p>
-                    </div>
+                    <p>Make: Mercedes-Benz</p>
+                    <p>Model: G class</p>
+                    <p>Year: 2011</p>
                 </div>
+            </div>
+            <div class="section">
+                <img class="img" src="~/testImages/TestImage2.jpg" />
                 <div class="section">
-                    <img class="img" src="~/testImages/TestImage2.jpg" />
-                    <div class="right-section">
-                        <p>Make: </p>
-                        <p>Model: </p>
-                        <p>Year: </p>
-                    </div>
+                    <p>Make: </p>
+                    <p>Model: </p>
+                    <p>Year: </p>
                 </div>
             </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Second slide">
+            <div class="section">
+                <img class="img" src="~/testImages/TestImage3jpg.jpg" />
+                <div class="section">
+                    <p>Make: BMW</p>
+                    <p>Model: 320</p>
+                    <p>Year: 2011</p>
+                </div>
+            </div>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="..." alt="Third slide">
+
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
