Added service Added controller Added migration

--- a/CarMarketplace.Web/Views/Catalog/Search.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Search.cshtml
@@ -93,4 +93,4 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </fieldset>
 </form>
-<script src="~/js/search.js"></script>
+@*<script src="~/js/search.js"></script>*@
