--- a/CarMarketplace.Web/Views/Shared/_LoginPartial.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,9 +6,12 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-        <li class="nav-item">
-            <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Home/BecomeSeller" title="Become">Become a seller!</a>
+    <li class="nav-item">
+        <a  class="nav-link text-dark" asp-controller="User" asp-Action="BecomeSeller" title="Become">Become a seller!</a>
     </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-area="Identity" asp-page="/User/BecomeSeller" title="Become">Become a lender!</a>
+        </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
             <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
