More methods added to user service

--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using CarMarketplace.Web
 @using CarMarketplace.Services.Data
 @using CarMarketplace.Web.ViewModels
+@using CarMarketplace.Web.ViewModels.User;7
 @using CarMarketplace.Services.Data.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
