--- a/CarMarketplace.Web/Views/User/BecomeSeller.cshtml
+++ b/CarMarketplace.Web/Views/User/BecomeSeller.cshtml
@@ -1,5 +1,6 @@
-﻿<h3>We need your personal information in order to become a seller!</h3>
+﻿@model UserPersonalInfoViewModel;
 
+<h5>We need your personal information in order to become a seller!</h5>
 <form asp-action="Create" method="post">
     <div class="mb-3">
         <label asp-for="FirstName" class="form-label"></label>
