--- a/CarMarketplace.Web/Views/Home/Index.cshtml
+++ b/CarMarketplace.Web/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<CarCardViewModel>
+﻿@model ICollection<CarShortViewModel>
 
 @{
     ViewData["Title"] = "Home Page";
@@ -7,7 +7,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Here you can browse for the perfect car</p>
+    <p class="fs-3">Here you can browse for the perfect car</p>
 </div>
 
 <div id="carouselExampleIndicators" class="carousel slide">
