--- a/CarMarketplace.Web/Views/Shared/_Layout.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Search">Search</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Catalog">Catalog</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
