Added a button to catalog page

--- a/CarMarketplace.Web/Views/Catalog/Catalog.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Catalog.cshtml
@@ -6,7 +6,14 @@
 }
 
 <div class="container">
-    <h1 class="my-4">Car Catalog</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <h1 class="my-4">Car Catalog</h1>
+        </div>
+        <div class="col-md-6 align-middle">
+            <a asp-controller="Catalog" asp-action="Search" class="btn btn-primary mt-3 float-end">Search</a>
+        </div>
+    </div>
 
     <div class="row">
         @foreach (var post in Model.Take(3))
@@ -30,7 +37,29 @@
                 </div>
             </a>
         }
-
+    </div>
+    <div class="row">
+        @foreach (var post in Model.Skip(3).Take(3))
+        {
+            imageSrc = ViewData["CloudDomain"] + post.MainPictureUrl;
+            <a href="#" class="col-md-4" style="text-decoration: none">
+                <div>
+                    <div class="card mb-4">
+                        <img src="@imageSrc" class="card-img-top" alt="@post.CarName">
+                        <div class="card-body">
+                            <h3 class="card-title"><strong>@post.CarName</strong></h3>
+                            <span class="card-text fs-3">Price: @post.Price lv.</span>
+                            <br>
+                            <span class="card-text">Year: @post.CarYear</span>
+                            <br>
+                            <p class="card-text">@post.CarProvinceName</p>
+                            <span class="card-text">@post.PublishDate.ToString("HH:mm:ss MM/dd/yyyy")</span>
+                            <br>
+                        </div>
+                    </div>
+                </div>
+            </a>
+        }
     </div>
 </div>
 
