--- a/CarMarketplace.Web/Views/Catalog/Search.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Search.cshtml
@@ -9,20 +9,20 @@
             <label for="exampleSelect1" class="form-label mt-4">Select Make</label>
             <select class="form-select" id="MakeSelect">
                 <option>All</option>
-                @foreach (var item in Model.Makes)
+                @*@foreach (var item in Model.Makes)
                 {
                     <option value="@item.Id">@item</option>
-                }
+                }*@
             </select>
         </div>
         <div class="form-group">
             <label for="exampleSelect1" class="form-label mt-4">Select Model</label>
             <select class="form-select" id="ModelSelect disabled">
                 <option>All</option>
-                @foreach (var item in Model.Models)
+                @*@foreach (var item in Model.Models)
                 {
                     <option value="@item.Id">@item</option>
-                }
+                }*@
             </select>
         </div>
         <div class="form-group">
