Nofitications added Some other changes to search functionality

--- a/CarMarketplace.Web/Views/Catalog/Search.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Search.cshtml
@@ -1,30 +1,68 @@
-﻿
+﻿@model SearchViewModel
 @{
     ViewData["Title"] = "Search";
 }
 
+<div class="d-grid gap-2 col-6 mx-auto text-center mt-5">
+    <h3>@ViewData["Title"]</h3>
+</div>
 <form>
     <fieldset>
         <div class="form-group">
             <label for="exampleSelect1" class="form-label mt-4">Select Make</label>
             <select class="form-select" id="MakeSelect">
                 <option>All</option>
-                @*@foreach (var item in Model.Makes)
+                @foreach (var item in Model.Makes)
                 {
-                    <option value="@item.Id">@item</option>
-                }*@
+                    <option value="@item.Id">@item.Name</option>
+                }
             </select>
         </div>
         <div class="form-group">
             <label for="exampleSelect1" class="form-label mt-4">Select Model</label>
-            <select class="form-select" id="ModelSelect disabled">
+            <select class="form-select" id="ModelSelect" disabled>
                 <option>All</option>
-                @*@foreach (var item in Model.Models)
+                @foreach (var item in Model.Models)
                 {
-                    <option value="@item.Id">@item</option>
-                }*@
+                    <option value="@item.Id">@item.ModelName</option>
+                }
             </select>
         </div>
+        <div class="form-group">
+            <label for="exampleSelect1" class="form-label mt-4">Select Category</label>
+            <select class="form-select" id="CategorySelect">
+                <option>All</option>
+                @foreach (var item in Model.Categories)
+                {
+                    <option value="@item.Id">@item.Name</option>
+                }
+            </select>
+        </div>
+        <div class="row mt-3">
+            <br />
+            <span class="fs-4">Kilometers:</span>
+            <div class="form-group col-md-4">
+                <label for="fromKm">From:</label>
+                <input type="number" id="fromKm" class="form-control" placeholder="e.g., 50000">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="toKm">To:</label>
+                <input type="number" id="toKm" class="form-control" placeholder="e.g., 150000">
+            </div>
+        </div>
+        <div class="row mt-3">
+            <br />
+            <span class="fs-4">Horsepower:</span>
+            <div class="form-group col-md-4">
+                <label for="fromHP">From:</label>
+                <input type="number" id="fromHP" class="form-control" placeholder="e.g., 100">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="toHP">To:</label>
+                <input type="number" id="toHP" class="form-control" placeholder="e.g., 240">
+            </div>
+        </div>
+
         <div class="form-group">
             <label for="exampleTextarea" class="form-label mt-4">Example textarea</label>
             <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
@@ -82,14 +120,84 @@
         </fieldset>
         <fieldset class="form-group">
             <legend class="mt-4">Ranges</legend>
-            <label for="customRange1" class="form-label">Example range</label>
-            <input type="range" class="form-range" id="customRange1">
-            <label for="disabledRange" class="form-label">Disabled range</label>
-            <input type="range" class="form-range" id="disabledRange" disabled="">
-            <label for="customRange3" class="form-label">Example range</label>
-            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">
+            <label for="Range1" class="form-label">Year from:</label>
+            <input type="range" class="form-range" id="YearFromRange">
+            <label for="Range" class="form-label">Year to range</label>
+            <input type="range" class="form-range" id="YearToRange">
+
+            <div class="year-dot year-dot-start"></div>
+            <div class="year-dot year-dot-end"></div>
+            <br>
+            <input type="text" id="year-range-slider" class="slider">
+
+            @*<label for="customRange3" class="form-label">Example range</label>
+            <input type="range" class="form-range" min="0" max="5" step="0.5" id="customRange3">*@
         </fieldset>
         <button type="submit" class="btn btn-primary">Submit</button>
     </fieldset>
 </form>
+
+
+
+<div class="container mt-5">
+    <h2>Car Search Form</h2>
+    <form>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="make">Make</label>
+                <select id="make" class="form-control">
+                    <option value="">Select Make</option>
+                    <!-- Add options for car makes -->
+                </select>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="model">Model</label>
+                <select id="model" class="form-control">
+                    <option value="">Select Model</option>
+                    <!-- Add options for car models -->
+                </select>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="year">Year Range</label>
+                <input type="text" id="year" class="form-control" placeholder="e.g., 2000-2023">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="bodyShape">Body Shape</label>
+                <select id="bodyShape" class="form-control">
+                    <option value="">Select Body Shape</option>
+                    <!-- Add options for body shapes -->
+                </select>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="price">Price Range</label>
+                <input type="text" id="price" class="form-control" placeholder="e.g., $10000-$50000">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="transmission">Transmission</label>
+                <select id="transmission" class="form-control">
+                    <option value="">Select Transmission</option>
+                    <option value="manual">Manual</option>
+                    <option value="automatic">Automatic</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="maxKm">Max Kilometers</label>
+                <input type="number" id="maxKm" class="form-control" placeholder="e.g., 50000">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="horsepower">Horsepower Range</label>
+                <input type="text" id="horsepower" class="form-control" placeholder="e.g., 150-300">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="displacement">Displacement Range</label>
+                <input type="text" id="displacement" class="form-control" placeholder="e.g., 2.0-4.0">
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+</div>
 @*<script src="~/js/search.js"></script>*@
