--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using CarMarketplace.Web
 @using CarMarketplace.Web.ViewModels
-@using CarMarketplace.Web.ViewModels.Home;
+@using CarMarketplace.Web.ViewModels.Catalog;
 @using CarMarketplace.Web.ViewModels.User;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
