--- a/CarMarketplace.Web/Views/Shared/_Layout.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Catalog">Catalog</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="CatalogHome">Catalog</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
