--- a/CarMarketplace.Web/Views/Catalog/Catalog.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Catalog.cshtml
@@ -14,7 +14,7 @@
     {
         imageSrc = ViewData["CloudDomain"] + @post.MainPictureUrl;
         <div class="container text-center border rounded shadow-lg p-3 mb-4 mt-4">
-            <div class="row align-items-start">
+            <a href="#" class="row align-items-start text-decoration-none">
                 <div class="col-5">
                     <img src="@imageSrc" class="card-img" alt="@post.CarName">
                 </div>
@@ -22,17 +22,23 @@
                     <div class="col mt-3 text-start">
                         <h1>@post.CarName @post.CarYear</h1>
                         <hr>
-                        <div class="mt-4">
+                        <div class="mt-5">
                             <span class="fs-1"><span class="text-success">@post.Price</span><span class="fw-bold"> BGN</span></span>
                             <br>
                             <span class="fs-1">@post.CarEngineDisplacement</span>
                             <span class="fs-1">@post.CarEngineFuelType</span>
                             <br>
+                            <span class="fs-1">@post.CarTransmissionType</span>
+                            <br>
                             <span class="fs-1">@post.CarProvinceName</span>
+                            <br>
+                            <div class="mt-4 text-end">
+                                <span class="fs-3">@post.PublishDate</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
     }
 </div>
